Added the new templates for OpenLayers map

--- a/tethysapp/snow_inspector/templates/snow_inspector/base.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/base.html
@@ -38,6 +38,5 @@
 
 {% block scripts %}
   {{ block.super }}
-  <script src="{% static 'snow_inspector/js/main.js' %}" type="text/javascript"></script>
-  <script src="{% static 'snow_inspector/js/main_snow.js' %}" type="text/javascript"></script>
+  <script src="{% static 'snow_inspector/js/main_snow.js' %}"></script>
 {% endblock %}
