--- a/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
@@ -25,7 +25,7 @@
 
 {% block app_content %}
    
-    <p>Move snow location on the map</p>
+    <p>Click on the map to change snow location. Then click GET SNOW! to show snow history.</p>
     {% gizmo map_view map_options %}
 
 {% endblock %}
