Instead of the gizmo, using the OpenLayers map control. Using the Esri world topo map as the default basemap.

--- a/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
@@ -4,11 +4,26 @@
 
 {% load tethys_gizmos %}
 
+{% block global_scripts %}
+  {{ block.super }}
+  <script src="{% static 'snow_inspector/vendor/openlayers/v3.3.0/ol.js' %}" type="text/javascript"></script>
+{% endblock %}
+
+{% block styles %}
+  {{ block.super }}
+  <link rel="stylesheet" href="{% static 'snow_inspector/vendor/openlayers/v3.3.0/ol.css' %}" type="text/css" />
+  <style>
+    .ol-mouse-position {
+      top: 10px;
+      right: 40px;
+    }
+  </style>
+{% endblock %}
+
 
 
 {% block app_navigation_items %}
 <form method="get" action="../snow_graph/">
-  {% csrf_token %}
   <li>
     {% gizmo date_picker date_picker %}
     {% gizmo text_input days_picker %}
@@ -26,7 +41,17 @@
 {% block app_content %}
    
     <p>Click on the map to change snow location. Then click GET SNOW! to show snow history.</p>
-    {% gizmo map_view map_options %}
+    <div id="map_view_outer_container">
+      <div class="row">
+        <div class="col-md-12">
+          <div id="map_wrapper">
+            <div id="map_view" style="width: 100%; position: relative;">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!-- end outerContainer -->
+    
 
 {% endblock %}
 
