--- a/tethysapp/snow_inspector/templates/snow_inspector/snow_graph.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/snow_graph.html
@@ -22,5 +22,6 @@
 <script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts.js" type="text/javascript"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts-more.js" type="text/javascript"></script>
 <script src="/static/tethys_gizmos/vendor/highcharts/js/modules/exporting.js" type="text/javascript"></script>
+<script src="{% static 'snow_inspector/js/main_snow.js' %}"></script>
   {{ block.super }}
 {% endblock %}
