--- a/tethysapp/snow_inspector/templates/snow_inspector/snow_graph.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/snow_graph.html
@@ -1,5 +1,7 @@
 {% extends "snow_inspector/base.html" %}
 
+{% load staticfiles %}
+
 {% load tethys_gizmos %}
 
 {% block app_navigation_items %} 
@@ -17,11 +19,10 @@
   <a href="{% url 'snow_inspector:home' %}" class="btn btn-default">Back</a>
 {% endblock %}
 
-{% block scripts %}
-  
-<script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts.js" type="text/javascript"></script>
-<script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts-more.js" type="text/javascript"></script>
-<script src="/static/tethys_gizmos/vendor/highcharts/js/modules/exporting.js" type="text/javascript"></script>
+{% block scripts %} 
+<script src="{% static 'snow_inspector/vendor/highcharts/highcharts.js' %}" type="text/javascript"></script>
+<script src="{% static 'snow_inspector/vendor/highcharts/exporting.js' %}" type="text/javascript"></script>
+<script src="{% static 'snow_inspector/vendor/highcharts/export-csv.js' %}" type="text/javascript"></script>
 <script src="{% static 'snow_inspector/js/main_snow.js' %}"></script>
   {{ block.super }}
 {% endblock %}
