improve display of lat and longitude

--- a/tethysapp/snow_inspector/templates/snow_inspector/home.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/home.html
@@ -10,9 +10,10 @@
   <h1>Welcome to the Snow Inspector!</h1>
   <p>The Snow Inspector app lets you explore the history of snow cover at any point in
   	the world using data from the MODIS Terra satellite sensor. The original data is retrieved
-  	from map tiles of the NASA Global Imagery Browse Service (GIBS)</p>
+  	from map tiles of the <a href="http://earthdata.nasa.gov/about-eosdis/science-system-description/eosdis-components/global-imagery-browse-services-gibs">NASA Global Imagery Browse Service (GIBS)</a></p>
   <p>To start the application, <a href="{% url 'snow_inspector:map' %}">go to the map</a> and
-  	select your point of interest to show the snow coverage time series.
+  	select your point of interest to show the snow coverage time series.</p>
+    <p>For more info, check our <a href="http://github.com/jirikadlec2/snow-inspector">source code</a> at GitHub</p>
 {% endblock %}
 
 {% block app_actions %}
