New feature: Export data in WaterML 1.1

--- a/tethysapp/snow_inspector/templates/snow_inspector/snow_graph.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/snow_graph.html
@@ -17,6 +17,7 @@
 
 {% block app_actions %}
   <a href="{% url 'snow_inspector:home' %}" class="btn btn-default">Back</a>
+  <a id="waterml-link" target="_blank" href="{% url 'snow_inspector:waterml' %}{{waterml_url}}" class="btn btn-default">Get WaterML</a>
 {% endblock %}
 
 {% block scripts %} 
