initial attempt at showing snow values in the map

--- a/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
@@ -40,7 +40,10 @@
 
 {% block app_content %}
    
-    <p>Click on the map to change snow location. Then click GET SNOW! to show snow history.</p>
+    <p>Click on the map to change snow location. Then click GET SNOW! to show snow history.
+      <input type="button" id="btnShowPixels" name="btnShowPixels" value="Show Pixels" />
+      <input type="button" id="btnShowModis" name="btnShowModis" value="Show Modis Layer" />
+    </p>
     <div id="map_view_outer_container">
       <div class="row">
         <div class="col-md-12">
