remember the place, zoom and time from original map view

--- a/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
@@ -30,8 +30,10 @@
     {% gizmo text_input lat_picker %}
     {% gizmo text_input lon_picker %}
   </li>
-  <li>
-  <input type="hidden" id="end" name="end"></input>
+
+  <input type='hidden' id='end' name='end'></input>
+  <input type='hidden' id='zoom' name='zoom'></input>
+
   <input type="submit" value="GET SNOW!" name="name-form-submit" class="btn btn-default">
   </li>
 
