--- a/tethysapp/snow_inspector/templates/snow_inspector/snow_graph.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/snow_graph.html
@@ -5,7 +5,7 @@
 {% load tethys_gizmos %}
 
 {% block app_navigation_items %} 
-	<li><a href="{% url 'snow_inspector:map' %}{{map_url}}">Map Input</a></li> 
+	<li><a href="{% url 'snow_inspector:home' %}{{map_url}}">Map Input</a></li>
 {% endblock %}
 
 {% block app_content %}
@@ -16,14 +16,71 @@
 {% endblock %}
 
 {% block app_actions %}
-  <a class="btn btn-default" href="{% url 'snow_inspector:map' %}{{map_url}}">Back</a>
+  <a class="btn btn-default" href="{% url 'snow_inspector:home' %}{{map_url}}">Back</a>
+
+  <a name="btnUpload" class="btn btn-default" id="btnUpload" data-toggle="modal" data-target="#hydroshare-modal" role="button">
+            <span class="glyphicon hydroshare" aria-hidden="true"></span>
+            Upload to HydroShare
+  </a>
+
   <a id="waterml-link" target="_blank" href="{% url 'snow_inspector:waterml' %}{{waterml_url}}" class="btn btn-default">Get WaterML</a>
+
+
 {% endblock %}
 
-{% block scripts %} 
+{% block scripts %}
+
+<div class="modal fade" id="hydroshare-modal" tabindex="-1" role="dialog" aria-labelledby="AddHydroshareResource">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h6 class="modal-title">Upload File to HydroShare as a Resource(*Required)</h6>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="resource-title" class="control-label">*Resource Title:</label>
+                    <input type="text" class="form-control" id="resource-title">
+                </div>
+                <div class="form-group">
+                    <label for="resource-type" class="control-label">*Resource Type:</label>
+                    <select class="form-control" id="resource-type">
+                        <option>Generic</option>
+                        <!--<option>Geographic Raster</option>-->
+                        <!--<option>HIS Referenced Time Series</option>-->
+                        <!--<option>Model Program</option>-->
+                        <!--<option>Model Instance</option>-->
+                        <!--<option>Multidimensional (NetCDF)</option>-->
+                        <!--<option>Time Series</option>-->
+                        <!--<option>Application</option>-->
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="resource-abstract" class="control-label">*Resource Abstract:</label>
+                    <textarea rows="6" cols="50" id="resource-abstract" class="form-control"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="resource-keywords" class="control-label">*Resource Keywords:</label>
+                    <input type="text" class="form-control" id="resource-keywords">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div id="display-status" class="col-md-8"></div>
+                <div id="footer-buttons" class="col-md-4">
+                    <button type="button" class="btn btn-default footer" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary footer" id="hydroshare-proceed">Proceed</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <script src="{% static 'snow_inspector/vendor/highcharts/highcharts.js' %}" type="text/javascript"></script>
 <script src="{% static 'snow_inspector/vendor/highcharts/exporting.js' %}" type="text/javascript"></script>
 <script src="{% static 'snow_inspector/vendor/highcharts/export-csv.js' %}" type="text/javascript"></script>
 <script src="{% static 'snow_inspector/js/main_snow.js' %}"></script>
+<script src="{% static 'snow_inspector/js/hydroshare.js' %}"></script>
   {{ block.super }}
 {% endblock %}
