--- a/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
@@ -66,7 +66,7 @@
                            Click the "Get WaterML" to save results as a WaterML file.
                         </p>
                         <h6>5. Upload to HydroShare</h6>
-                        <p>Click the "Upload to HydroShare" and fill out the meatadata form. </p>
+                        <p>Click the "Upload to HydroShare" and fill out the metadata form. </p>
 
                         <h9>Note: The original data is retrieve from map tiles of the
                           <a href="http://earthdata.nasa.gov/about-eosdis/science-system-description/eosdis-components/global-imagery-browse-services-gibs">
