Added overview map to the graph page showing the pixel values in the area When user clicks on graph, the map corresponding to clicked date is displayed.

--- a/tethysapp/snow_inspector/public/css/main.css
+++ b/tethysapp/snow_inspector/public/css/main.css
@@ -39,3 +39,12 @@
 .checkbox {
      text-indent: 15px;
 }
+
+.ol-mouse-position {
+      top: 10px;
+      right: 40px;
+}
+
+#detail-map {
+    height: 500px;
+}
