--- a/tethysapp/snow_inspector/templates/snow_inspector/snow_graph.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/snow_graph.html
@@ -4,8 +4,19 @@
 
 {% load tethys_gizmos %}
 
+{% block global_scripts %}
+  {{ block.super }}
+  <script src="{% static 'snow_inspector/vendor/openlayers/v3.3.0/ol.js' %}" type="text/javascript"></script>
+{% endblock %}
+
+{% block styles %}
+  {{ block.super }}
+  <link rel="stylesheet" href="{% static 'snow_inspector/vendor/openlayers/v3.3.0/ol.css' %}" type="text/css" />
+{% endblock %}
+
 {% block app_navigation_items %} 
 	<li><a href="{% url 'snow_inspector:home' %}{{map_url}}">Map Input</a></li>
+    <div id="detail-map"></div>
 {% endblock %}
 
 {% block app_content %}
