Detail map in time series graph updates on hover. Clean-up of user interface. Only activate 'show pixels' option for very high zoom.

--- a/tethysapp/snow_inspector/public/css/main.css
+++ b/tethysapp/snow_inspector/public/css/main.css
@@ -48,3 +48,23 @@
 #detail-map {
     height: 500px;
 }
+
+#inputDays {
+    width: 250px;
+}
+
+#endDate {
+    width: 250px;
+}
+
+#getsnow {
+    width: 250px;
+}
+
+#inputLat {
+    width: 120px;
+}
+
+#inputLon {
+    width: 120px;
+}
