--- a/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
@@ -56,7 +56,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Welcome to the MODIS snow inspector!</h4>
+                <h4 class="modal-title">Welcome to MODIS Snow Inspector!</h4>
             </div>
             <div class="modal-body">
                 <div id="welcome-info">
@@ -83,12 +83,17 @@
                 </div>
             </div>
             <div class="modal-footer">
+                <div id="byu-logo-container">
+                    <span><i>Developed at the BYU Hydroinformatics Lab</i></span>
+                    <img src="{% static 'snow_inspector/images/byu-medallion.png' %}"/>
+                </div>
                 <button type="button" class="btn btn-default" id="close-popup" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
 </div>
 <!-- End Modal -->
+
 {{block.super}}
 {% endblock %}
 
