description of the graph

--- a/tethysapp/snow_inspector/templates/snow_inspector/snow_graph.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/snow_graph.html
@@ -27,7 +27,9 @@
   <p>Snow Graph For: <i><span id="lat">{{lat}}</span> <span id="lon">{{lon}}</span></i>
   &nbsp;time period: <span id="startDate">{{startDate}}</span>&nbsp;-&nbsp;<span id="endDate">{{endDate}}</span></p>
 
-  <div id="snow-chart"></div> 
+  <div id="snow-chart"></div>
+
+  <p id="chart-label">Estimated percent snow coverage per cell (MODIS pixel)</p>
 {% endblock %}
 
 {% block app_actions %}
