--- a/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
+++ b/tethysapp/snow_inspector/templates/snow_inspector/openlayers_map.html
@@ -5,45 +5,46 @@
 {% load tethys_gizmos %}
 
 {% block global_scripts %}
-  {{ block.super }}
-  <script src="{% static 'snow_inspector/vendor/openlayers/v3.3.0/ol.js' %}" type="text/javascript"></script>
+{{ block.super }}
+<script src="{% static 'snow_inspector/vendor/openlayers/v3.3.0/ol.js' %}" type="text/javascript"></script>
 {% endblock %}
 
 {% block styles %}
-  {{ block.super }}
-  <link rel="stylesheet" href="{% static 'snow_inspector/vendor/openlayers/v3.3.0/ol.css' %}" type="text/css" />
-  <style>
+{{ block.super }}
+<link rel="stylesheet" href="{% static 'snow_inspector/vendor/openlayers/v3.3.0/ol.css' %}" type="text/css" />
+<style>
     .ol-mouse-position {
-      top: 10px;
-      right: 40px;
+        top: 10px;
+        right: 40px;
     }
-  </style>
+</style>
 {% endblock %}
 
 
 
 {% block app_navigation_items %}
 <form method="get" action="snow_graph/">
-  <button type="button" class="btn btn-default" data-toggle="modal" data-target="#welcome-popup">Instructions</button>
-<br><br>
-  <li>
-    {% gizmo date_picker date_picker %}
-    {% gizmo text_input days_picker %}
-      <table>
-          <tr>
-              <td>{% gizmo text_input lat_picker %}</td>
-              <td width="10px"></td>
-              <td>{% gizmo text_input lon_picker %}</td>
-          </tr>
-      </table>
-  </li>
+    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#welcome-popup">Instructions</button>
+    <a class="btn btn-default" href="http://github.com/jirikadlec2/snow-inspector" target="_blank">More Info</a>
+    <br><br>
+    <li>
+        {% gizmo date_picker date_picker %}
+        {% gizmo text_input days_picker %}
+        <table>
+            <tr>
+                <td>{% gizmo text_input lat_picker %}</td>
+                <td width="10px"></td>
+                <td>{% gizmo text_input lon_picker %}</td>
+            </tr>
+        </table>
+    </li>
 
-  <input type='hidden' id='end' name='end'></input>
-  <input type='hidden' id='zoom' name='zoom'></input>
-  <input type='hidden' id='layer' name='layer'></input>
+    <input type='hidden' id='end' name='end'></input>
+    <input type='hidden' id='zoom' name='zoom'></input>
+    <input type='hidden' id='layer' name='layer'></input>
 
-  <input type="submit" id='getsnow' value="GET SNOW!" name='getsnow' class="btn btn-default">
-  </li>
+    <input type="submit" id='getsnow' value="GET SNOW!" name='getsnow' class="btn btn-default">
+    </li>
 
 </form>
 {% endblock %}
@@ -69,16 +70,19 @@
                         <p>Click the Get Snow button to show a time-series graph.</p>
                         <h6>4. Download Results</h6>
                         <p>
-                           Click the "Get WaterML" to save results as a WaterML file.
+                            Click the "Get WaterML" to save results as a WaterML file.
                         </p>
                         <h6>5. Upload to HydroShare</h6>
                         <p>Click the "Upload to HydroShare" and fill out the metadata form. </p>
 
                         <h9>Note: The original data is retrieve from map tiles of the
-                          <a href="http://earthdata.nasa.gov/about-eosdis/science-system-description/eosdis-components/global-imagery-browse-services-gibs">
-                            NASA Global Imagery Browse Service (GIBS)</a> based on the MOD10_L3 swath daily fractional snow cover dataset.
-    For more info and source code, check our <a href="http://github.com/jirikadlec2/snow-inspector">source code</a> at GitHub
+                            <a href="http://earthdata.nasa.gov/about-eosdis/science-system-description/eosdis-components/global-imagery-browse-services-gibs">
+                                NASA Global Imagery Browse Service (GIBS)</a> based on the MOD10_L3 swath daily fractional snow cover dataset.
                         </h9>
+                        <br><br>
+                        <div id="extra-buttons">
+                            <a class="btn btn-default" href="http://github.com/jirikadlec2/snow-inspector" target="_blank">More Info</a>
+                        </div>
                     </ol>
                 </div>
             </div>
@@ -99,37 +103,37 @@
 
 
 {% block app_content %}
-   
-    <p>Click on the map to select location. Then click GET SNOW! to show snow history.
-      <input type="button" id="btnShowPixels" name="btnShowPixels" value="Show Pixels" />
-      <input type="button" id="btnShowModis" name="btnShowModis" value="Hide Modis Layer" />
-        &nbsp;Base Map:
-      <select id="selectBaseMap">
+
+<p>Click on the map to select location. Then click GET SNOW! to show snow history.
+    <input type="button" id="btnShowPixels" name="btnShowPixels" value="Show Pixels" />
+    <input type="button" id="btnShowModis" name="btnShowModis" value="Hide Modis Layer" />
+    &nbsp;Base Map:
+    <select id="selectBaseMap">
         <option value="esri">Esri</option>
         <option value="mapquest">MapQuest</option>
         <option value="bing">Bing</option>
         <option value="osm">OpenStreetMap</option>
-      </select>
-    </p>
-    <div id="map_view_outer_container">
-      <div class="row">
+    </select>
+</p>
+<div id="map_view_outer_container">
+    <div class="row">
         <div class="col-md-12">
-          <div id="map_wrapper">
-            <div id="map_view" style="width: 100%; position: relative;">
+            <div id="map_wrapper">
+                <div id="map_view" style="width: 100%; position: relative;">
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </div><!-- end outerContainer -->
-    
+    </div>
+</div><!-- end outerContainer -->
+
 
 {% endblock %}
 
 {% block app_actions %}
-  <a href="{% url 'snow_inspector:home' %}" class="btn btn-default">Back</a>
+<a href="{% url 'snow_inspector:home' %}" class="btn btn-default">Back</a>
 {% endblock %}
 
 {% block scripts %}
-  {{ block.super }}
-  <script src="{% static 'snow_inspector/js/map.js' %}"></script>
+{{ block.super }}
+<script src="{% static 'snow_inspector/js/map.js' %}"></script>
 {% endblock %}
